minio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: minio
  labels:
    app: minio
