wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: wordpress
  labels: 
    app: wordpress
spec:
  selector: 
    matchLabels:
      app: wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistant-storage 
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistant-storage  
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
