mariadb-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mariadb
